--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,5 @@
 @white: #FFFFFF;
-@main-color: #666633;
-@accent-color: #d4d4aa;
+@main-color: #552eb1;
+@accent-color: #6480f8;
 @text-color-dark: #595959;
+@text-color-light: rgba(255, 255, 255, 0.603);
