--- a/css/index.css
+++ b/css/index.css
@@ -128,7 +128,7 @@ table {
 }
 body {
   font-family: 'Open Sans Condensed', sans-serif;
-  background-image: url(https://images.pexels.com/photos/1650032/pexels-photo-1650032.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  background-image: url(/img/fancy-pants.jpg);
   width: 100%;
   background-attachment: fixed;
   background-position: center;
@@ -150,12 +150,12 @@ body {
 }
 .container nav a {
   color: #FFFFFF;
-  background: #666633;
+  background: #552eb1;
   text-decoration: none;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 .container nav a:hover {
-  text-shadow: 0px 0px 7px #d4d4aa;
+  text-shadow: 0px 0px 7px #6480f8;
 }
 .container .about {
   padding-top: 10rem;
@@ -165,15 +165,15 @@ body {
 }
 .container .about h1 {
   font-size: 7rem;
-  color: #333333;
+  color: #ffffff;
   font-weight: bolder;
-  text-shadow: 2px 2px #666633;
+  text-shadow: 2px 2px 10px blue;
 }
 .container .about p {
   margin-top: 1.2rem;
   width: 90%;
   font-size: 2rem;
-  color: #333333;
+  color: #d1d0d0;
   font-weight: bold;
 }
 html {
@@ -193,7 +193,7 @@ p {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  background-color: #d4d4aa;
+  background-color: #6480f8;
   color: #595959;
   border-radius: 2rem;
 }
@@ -213,7 +213,7 @@ p {
   height: 50px;
   border-radius: 1rem;
   color: #FFFFFF;
-  background: #666633;
+  background: #552eb1;
   margin: 15px;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 2rem;
@@ -242,7 +242,7 @@ html {
 /* Sidebar */
 #sidebar {
   padding: 2.5em 2.5em 0.5em 2.5em;
-  background: #666633;
+  background: #552eb1;
   cursor: default;
   height: 100vh;
   left: 0;
@@ -308,15 +308,15 @@ body.is-ie #sidebar > .inner {
   width: 100%;
 }
 #sidebar nav a:before {
-  background: #666633;
+  background: #552eb1;
 }
 #sidebar nav a:after {
-  background-image: linear-gradient(to right, #666633, #d4d4aa);
+  background-image: linear-gradient(to right, #552eb1, #6480f8);
   transition: max-width 0.2s ease;
   max-width: 0;
 }
 #sidebar nav a:hover {
-  color: #d4d4aa;
+  color: #6480f8;
 }
 #sidebar nav a.active {
   color: #ffffff;
@@ -374,7 +374,7 @@ body.is-preload #sidebar nav ul li {
   }
   #sidebar nav a:after {
     background-image: none;
-    background-color: #666633;
+    background-color: #552eb1;
   }
 }
 @media screen and (max-width: 536px) {
