--- a/less/marketing-page.less
+++ b/less/marketing-page.less
@@ -4,7 +4,7 @@
 body {
   
   font-family: 'Open Sans Condensed', sans-serif;
-  background-image: url(https://images.pexels.com/photos/1650032/pexels-photo-1650032.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  background-image: url(/img/fancy-pants.jpg);
   width: 100%;
   background-attachment: fixed;
   background-position: center;
@@ -49,14 +49,14 @@ body {
         h1{
           font-size: 7rem;
           // padding: 15px;
-          color: #333333;
+          color: #ffffff;
           font-weight: bolder;
         
           // position: absolute;
           // top: 50%;
           // left: 50%;
           // // transform: translate(-50%, -50%);
-          text-shadow: 2px 2px @main-color;
+          text-shadow: 2px 2px 10px blue;
 
         }
 
@@ -64,7 +64,7 @@ body {
           margin-top: 1.2rem;
           width: 90%;
           font-size: 2rem;
-          color: #333333;
+          color: #d1d0d0;
           font-weight: bold;
           // position: absolute;
           // top: 90%;
