--- a/css/contactpage.css
+++ b/css/contactpage.css
@@ -15,7 +15,7 @@ body {
   line-height: 30px;
   color: #777;
   background: #4CAF50;
-  background-image: url(https://images.pexels.com/photos/807598/pexels-photo-807598.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+  background-image: url(/img/fancy-pants.jpg);
 }
 
 .container {
