--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -175,6 +175,8 @@
 
          #sidebar {
              display: flex;
+             padding-right: 21%;
+             align-content:center;
              flex-wrap: wrap;
              justify-content: space-evenly;
              width: 95%;
