--- a/less/marketing-page.less
+++ b/less/marketing-page.less
@@ -119,7 +119,7 @@ p{
           .buttonmix;
           font-size: 2rem;
           &:hover {
-            background:#6d6d3d;
+            background: @accent-color;
             color: @white;
           }
         }
@@ -151,6 +151,12 @@ p{
         h1{
           font-size: 2rem;
         }
+      .whatwedo img{
+        height: auto;
+        width: 100%;
+        
+        
+      }
       }
      
       
