--- a/css/index.css
+++ b/css/index.css
@@ -240,6 +240,16 @@ html {
     font-size: 2rem;
   }
 }
+@media (max-width: 1000px) {
+  img {
+    opacity: 1;
+    width: 90%;
+    height: auto;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 2rem;
+  }
+}
 /* Sidebar */
 #sidebar {
   padding: 2.5em 2.5em 0.5em 2.5em;
