--- a/less/marketing-page.less
+++ b/less/marketing-page.less
@@ -159,7 +159,15 @@ p{
   
 }
   @media(max-width: 1000px) {
-   
+    img{
+      opacity: 1;
+      width: 90%;
+      height: auto;
+      padding: 10px;
+      margin-top: 20px;
+      border-radius: 2rem;
+    }
+
   }
 
 
