possibly fixxed images

--- a/less/marketing-page.less
+++ b/less/marketing-page.less
@@ -95,7 +95,7 @@ p{
         height: auto;
         margin-bottom: 25px;
         text-align: center;
-        display: flex;
+        // display: flex;
         justify-content: center;
         flex-wrap: wrap;
         background-color: @accent-color;
