fullscreen onclick/scroll chrome complete

--- a/css/index.css
+++ b/css/index.css
@@ -243,6 +243,32 @@ html {
     font-size: 2rem;
   }
 }
+body:fullscreen {
+  overflow: visible;
+  width: 0 !important;
+}
+body::-webkit-full-screen {
+  overflow: visible;
+  width: 0 !important;
+}
+body:fullscreen {
+  overflow: scroll;
+  width: 0 !important;
+}
+body:-ms-fullscreen {
+  overflow: scroll !important;
+}
+body:-webkit-full-screen {
+  width: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+body:-moz-full-screen {
+  overflow: scroll !important;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
 /* Sidebar */
 #sidebar {
   padding: 2.5em 2.5em 0.5em 2.5em;
