--- a/less/marketing-page.less
+++ b/less/marketing-page.less
@@ -1,24 +1,38 @@
 
   
 
-body {
+body .wrapper{
   
   font-family: 'Open Sans Condensed', sans-serif;
-  background-image: url(/img/fancy-pants.jpg);
-  width: 100%;
-  background-attachment: fixed;
+  width: 100vw;
+  // height: 100%;
+  background-image: url(/img/fancy-pants.jpg) !important;
+  // background-attachment: fixed;
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.8; 
+  background-repeat: repeat;
+  background-size: 50%;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+ 
+  // opacity: 0.8; 
 }
+
+
 .container {
-    
+  // background-image: url(/img/fancy-pants.jpg) !important;
+  // background-attachment: fixed;
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: auto 500%;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
     color: @white;
      width: 75%;
      margin: 0 auto;
      align-items: center;
-    //  opacity: 1;
+     opacity: 1;
     // background-color: @main-color;
     // justify-content: center;
     // display: flex;
@@ -106,6 +120,7 @@ p{
         max-width: 700px;
         margin: 0 auto 25px;
         width: 100%;
+        transition: all 0.2s ease;
 
         p{
           padding: 15px;
@@ -165,10 +180,12 @@ p{
     }
   
 }
-  @media(max-width: 1000px) {
-  
-
+@media (device-width: 100vw) and (device-height: 100vh) {
+  .whatwedo .wwd{
+    max-width: 900px;
   }
+
+}
 
 
   body:fullscreen {
