--- a/less/team.less
+++ b/less/team.less
@@ -1,5 +1,5 @@
 body{
-   
+   background-image: url(/img/dark-wood.jpg);
     // nav {
     //     display: flex;
     //     font-size: 1.8rem;
@@ -74,7 +74,7 @@ body{
 // }
 
 body  .people .title .person {
-    background-color: rgba(2, 233, 125, 0.842);
+    background-color: @accent-color;
     
     
 }
