--- a/css/index.css
+++ b/css/index.css
@@ -464,6 +464,7 @@ body .people .title .person {
 h1 {
   font-size: 2rem;
   text-shadow: 2px 3px 5px;
+  color: rgba(255, 255, 255, 0.603);
 }
 @media (max-width: 600px) {
   body .people .title .person {
