--- a/less/team.less
+++ b/less/team.less
@@ -81,7 +81,7 @@ body  .people .title .person {
 .people h2, h1 {
     font-size: 2rem;
     text-shadow: 2px 3px 5px;
-    
+    color: @text-color-light;
 }
 
 @media(max-width: 600px) {
