--- a/less/index.less
+++ b/less/index.less
@@ -2,6 +2,7 @@
 @import "variables";
 @import "mixins";
 @import "resets";
-@import "marketing-page";
-@import "sidebar";
+@import "main";
+@import "navbar";
 @import "team";
+@import "contact";
