--- a/less/variables.less
+++ b/less/variables.less
@@ -2,3 +2,7 @@
 @main-color: #666633;
 @accent-color: #d4d4aa;
 @text-color-dark: #595959;
+@content-bg-color: #bad9a2;
+//media queries
+@mobile: (max-width: 500px);
+@tablet: (max-width: 800px);
