--- a/css/index.css
+++ b/css/index.css
@@ -126,316 +126,335 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-body {
-  font-family: 'Open Sans Condensed', sans-serif;
-  background-image: url(https://images.pexels.com/photos/1650032/pexels-photo-1650032.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+header {
+  background-color: #adbf97;
   width: 100%;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.8;
+  border-radius: 2em;
 }
 .container {
-  color: #FFFFFF;
+  display: flex;
+}
+body {
+  background-color: #e2eb98;
+}
+body h1 {
+  font-size: 3em;
+}
+body h2 {
+  font-size: 2em;
+}
+body header {
+  text-align: center;
+  padding-bottom: 1.5em;
+}
+body .home-container {
+  display: flex;
+  flex-direction: column;
   width: 75%;
-  margin: 0 auto;
-}
-.container nav {
-  display: flex;
-  font-size: 1.8rem;
-  padding: 1 rem;
-  justify-content: space-evenly;
-  align-content: center;
-}
-.container nav a {
-  color: #FFFFFF;
-  background: #666633;
-  text-decoration: none;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-}
-.container nav a:hover {
-  text-shadow: 0px 0px 7px #d4d4aa;
-}
-.container .about {
-  padding-top: 10rem;
-  background-color: none;
-  position: relative;
-  text-align: center;
-}
-.container .about h1 {
-  font-size: 7rem;
-  color: #333333;
-  font-weight: bolder;
-  text-shadow: 2px 2px #666633;
-}
-.container .about p {
-  margin-top: 1.2rem;
-  width: 90%;
-  font-size: 2rem;
-  color: #333333;
-  font-weight: bold;
-}
-html {
-  font-size: 62.5%;
-}
-p {
-  font-size: 2rem;
-}
-.whatwedo {
-  padding: 25px;
-}
-.whatwedo .wwd {
-  width: 100%;
-  height: auto;
-  margin-bottom: 25px;
-  text-align: center;
-  display: flex;
+  margin: auto;
   justify-content: center;
-  flex-wrap: wrap;
-  background-color: #d4d4aa;
-  color: #595959;
-  border-radius: 2rem;
 }
-.whatwedo .wwd p {
-  padding: 15px;
-  font-size: 3rem;
-}
-.whatwedo .wwd img {
-  opacity: 1;
-  width: 90%;
-  padding: 10px;
-  margin-top: 20px;
-  border-radius: 2rem;
-}
-.whatwedo .wwd button {
-  width: 48%;
-  height: 50px;
-  border-radius: 1rem;
-  color: #FFFFFF;
-  background: #666633;
-  margin: 15px;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 2rem;
-}
-.whatwedo .wwd button:hover {
-  background: #6d6d3d;
-  color: #FFFFFF;
-}
-footer {
-  display: flex;
-  justify-content: center;
-  color: #595959;
-}
-body,
-html {
-  height: 100%;
+@media (max-width: 800px) {
+  body .home-container {
+    width: 95%;
+  }
 }
 @media (max-width: 500px) {
-  body .container {
-    width: 100%;
-  }
-  body .about h1 {
-    font-size: 2rem;
-  }
-}
-/* Sidebar */
-#sidebar {
-  padding: 2.5em 2.5em 0.5em 2.5em;
-  background: #666633;
-  cursor: default;
-  height: 100vh;
-  left: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  position: fixed;
-  text-align: right;
-  top: 0;
-  width: 15rem;
-  z-index: 10000;
-}
-#sidebar > .inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transform: translateY(0);
-  transition: opacity 1s ease;
-  min-height: 100%;
-  opacity: 1;
-  width: 100%;
-}
-body.is-ie #sidebar > .inner {
-  height: 100%;
-}
-#sidebar nav > ul {
-  list-style: none;
-  padding: 0;
-}
-#sidebar nav > ul > li {
-  transform: translateY(0);
-  transition: opacity 0.15s ease, transform 0.75s ease;
-  margin: 1.5em 0 0 0;
-  opacity: 1;
-  padding: 0;
-  position: relative;
-}
-#sidebar nav > ul > li:first-child {
-  margin: 0;
-}
-#sidebar nav a {
-  transition: color 0.2s ease;
-  border: 0;
-  color: white;
-  display: block;
-  font-size: 0.6em;
-  font-weight: bold;
-  letter-spacing: 0.25em;
-  line-height: 1.75;
-  outline: 0;
-  padding: 1.35em 0;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-#sidebar nav a:before,
-#sidebar nav a:after {
-  border-radius: 0.2em;
-  bottom: 0;
-  content: '';
-  height: 0.2em;
-  position: absolute;
-  right: 0;
-  width: 100%;
-}
-#sidebar nav a:before {
-  background: #666633;
-}
-#sidebar nav a:after {
-  background-image: linear-gradient(to right, #666633, #d4d4aa);
-  transition: max-width 0.2s ease;
-  max-width: 0;
-}
-#sidebar nav a:hover {
-  color: #d4d4aa;
-}
-#sidebar nav a.active {
-  color: #ffffff;
-}
-#sidebar nav a.active:after {
-  max-width: 100%;
-}
-body.is-preload #sidebar > .inner {
-  opacity: 0;
-}
-body.is-preload #sidebar nav ul li {
-  transform: translateY(2em);
-  opacity: 0;
-}
-@media screen and (max-width: 1280px) {
-  #sidebar {
-    height: 6em;
-    left: 0;
-    line-height: 6em;
-    overflow: hidden;
-    padding: 0;
-    text-align: center;
-    top: 0;
-    width: 100%;
-  }
-  #sidebar > .inner {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: stretch;
-    height: inherit;
-    line-height: inherit;
-  }
-  #sidebar nav {
-    height: inherit;
-    line-height: inherit;
-  }
-  #sidebar nav ul {
-    display: flex;
-    height: inherit;
-    line-height: inherit;
-    margin: 0;
-  }
-  #sidebar nav ul li {
-    display: block;
-    height: inherit;
-    line-height: inherit;
-    margin: 0 0 0 2em;
-    padding: 0;
-  }
-  #sidebar nav a {
-    height: inherit;
-    line-height: inherit;
-    padding: 0;
-  }
-  #sidebar nav a:after {
-    background-image: none;
-    background-color: #666633;
-  }
-}
-@media screen and (max-width: 536px) {
-  #sidebar {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+  body .home-container {
     width: 100%;
   }
 }
-body .people {
+body .home-container .home-box {
+  background-color: #bad9a2;
+  border-radius: 2em;
+  margin: 3em;
+}
+@media (max-width: 500px) {
+  body .home-container .home-box {
+    margin-left: 0em;
+    margin-right: 0em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+}
+body .home-container .home-box .homeimg {
+  border-radius: 2em;
+  margin: 1em 3em;
+  flex: 1 1 1;
   display: flex;
   justify-content: center;
+}
+body .home-container .home-box .homeimg img {
+  border-radius: 2em;
+}
+@media (max-width: 500px) {
+  body .home-container .home-box .homeimg {
+    margin: 1em 1em;
+  }
+}
+body .home-container .home-box .home {
+  padding-bottom: 1em;
+}
+body .home-container .home-box .home .play {
+  background-color: #9dc4b5;
   color: black;
-  margin-top: 25%;
-  flex-direction: column;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 2em;
+  font-size: 16px;
 }
-body .people .title {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 3rem;
+body .home-container .home-box .home p {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.25em;
 }
-body .people .title .person {
+footer {
+  text-align: center;
+}
+@media (max-width: 800px) {
+  body .container {
+    flex-direction: column;
+  }
+}
+body .container .navbar {
+  text-align: center;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
+  background-color: #adbf97;
   display: flex;
   flex-direction: column;
+  border-radius: 2em;
+}
+@media (max-width: 800px) {
+  body .container .navbar {
+    flex-direction: row;
+    width: 100%;
+    padding: 0em;
+    margin-bottom: 1em;
+  }
+}
+body .container .navbar a {
+  padding: 1em;
+  color: black;
+  font-size: 1.5em;
+  text-align: center;
+}
+@media (max-width: 500px) {
+  body .container .navbar a {
+    font-size: 1em;
+  }
+}
+@media (max-width: 800px) {
+  body .container .navbar a {
+    width: 100%;
+  }
+}
+.team-container {
+  width: 100%;
+  background-color: #9dc4b5;
+  border-radius: 2em;
+  margin-top: 3em;
+}
+.team-container p {
+  text-align: center;
+  font-size: 2em;
+}
+.team-container img {
+  width: 150px;
+  height: 150px;
+  border-radius: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.team-container .team1 {
+  width: 100%;
+  display: flex;
   justify-content: center;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 50%;
-  height: 200px;
-  background: #FFFFFF;
+}
+.team-container .team1 .team1-content {
+  padding: 2em;
+  margin: 4em;
+  border-radius: 2em;
+  background-color: #bad9a2;
+  width: auto;
+  justify-content: center;
+}
+.team-container .team2 {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  .team-container .team2 {
+    flex-direction: column;
+  }
+}
+.team-container .team2 .team2-content {
+  padding: 2em;
+  margin: 4em;
+  border-radius: 2em;
+  width: auto;
+  background-color: #bad9a2;
+}
+.team-container .team3 {
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  .team-container .team3 {
+    flex-direction: column;
+  }
+}
+.team-container .team3 .team3-content {
+  padding: 2em;
+  margin: 4em;
+  border-radius: 2em;
+  width: auto;
+  background-color: #bad9a2;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Roboto Italic'), local('Roboto-Italic'), url(https://fonts.gstatic.com/s/roboto/v20/KFOkCnqEu92Fr1Mu51xIIzc.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmSU5fBBc9.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
+body {
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  font-size: 12px;
+  line-height: 30px;
+  color: #777;
+  background: #4CAF50;
+}
+.container-contact {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea,
+#contact button[type="submit"] {
+  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+}
+#contact {
+  background: #F9F9F9;
+  padding: 25px;
+  margin: 150px 0;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+#contact h3 {
+  display: block;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+#contact h4 {
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+}
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+}
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #FFF;
+  margin: 0 0 5px;
   padding: 10px;
-  margin: 12px;
-  border-radius: 2rem;
 }
-body .people .title .person img {
-  width: 20%;
-  height: auto;
-  border-radius: 8rem;
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #aaa;
 }
-body .people .title .person {
-  background-color: rgba(2, 233, 125, 0.842);
+#contact textarea {
+  height: 100px;
+  max-width: 100%;
+  resize: none;
 }
-.people h2,
-h1 {
-  font-size: 2rem;
-  text-shadow: 2px 3px 5px;
+#contact button[type="submit"] {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #4CAF50;
+  color: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+  font-size: 15px;
 }
-@media (max-width: 600px) {
-  body .people .title .person {
-    background: transparent;
-    font-size: 2rem;
-  }
-  body .people .title .person img {
-    width: 150%;
-    justify-content: center;
-  }
+#contact button[type="submit"]:hover {
+  background: #43A047;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
-@media (max-width: 600px) {
-  h2 {
-    font-size: 2rem;
-  }
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+.copyright {
+  text-align: center;
+}
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 1px solid #aaa;
+}
+::-webkit-input-placeholder {
+  color: #888;
+}
+:-moz-placeholder {
+  color: #888;
+}
+::-moz-placeholder {
+  color: #888;
+}
+:-ms-input-placeholder {
+  color: #888;
 }
