--- a/less/team.less
+++ b/less/team.less
@@ -1,8 +1,8 @@
 .team-container {
     width:100%;
-    background-color: #9dc4b5;
+    background-color: @content-bg-color2;
     border-radius: 2em;
-    margin-top:3em;
+    margin-top: 3em;
     p{
         text-align: center;
         font-size: 2em;
