--- a/css/index.css
+++ b/css/index.css
@@ -157,6 +157,7 @@ body .home-container {
 @media (max-width: 800px) {
   body .home-container {
     width: 95%;
+    margin-top: 7em;
   }
 }
 @media (max-width: 500px) {
@@ -213,6 +214,7 @@ body .home-container .home-box .home p {
 }
 footer {
   text-align: center;
+  margin-bottom: 1em;
 }
 @media (max-width: 800px) {
   body .container {
@@ -223,6 +225,8 @@ body .container .navbar {
   text-align: center;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
+  position: fixed;
+  overflow-x: hidden;
   background-color: #adbf97;
   display: flex;
   flex-direction: column;
@@ -236,15 +240,21 @@ body .container .navbar {
     margin-bottom: 1em;
   }
 }
+body .container .navbar a:hover {
+  background-color: #bad9a2;
+}
 body .container .navbar a {
+  text-decoration: none;
+  text-align: center;
   padding: 1em;
   color: black;
   font-size: 1.5em;
-  text-align: center;
 }
 @media (max-width: 500px) {
   body .container .navbar a {
     font-size: 1em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
   }
 }
 @media (max-width: 800px) {
@@ -315,146 +325,4 @@ body .container .navbar a {
   border-radius: 2em;
   width: auto;
   background-color: #bad9a2;
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Roboto Italic'), local('Roboto-Italic'), url(https://fonts.gstatic.com/s/roboto/v20/KFOkCnqEu92Fr1Mu51xIIzc.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'), url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmSU5fBBc9.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  -o-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-}
-body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
-  font-weight: 100;
-  font-size: 12px;
-  line-height: 30px;
-  color: #777;
-  background: #4CAF50;
-}
-.container-contact {
-  max-width: 400px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-}
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea,
-#contact button[type="submit"] {
-  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
-}
-#contact {
-  background: #F9F9F9;
-  padding: 25px;
-  margin: 150px 0;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-#contact h3 {
-  display: block;
-  font-size: 30px;
-  font-weight: 300;
-  margin-bottom: 10px;
-}
-#contact h4 {
-  margin: 5px 0 15px;
-  display: block;
-  font-size: 13px;
-  font-weight: 400;
-}
-fieldset {
-  border: medium none !important;
-  margin: 0 0 10px;
-  min-width: 100%;
-  padding: 0;
-  width: 100%;
-}
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea {
-  width: 100%;
-  border: 1px solid #ccc;
-  background: #FFF;
-  margin: 0 0 5px;
-  padding: 10px;
-}
-#contact input[type="text"]:hover,
-#contact input[type="email"]:hover,
-#contact input[type="tel"]:hover,
-#contact input[type="url"]:hover,
-#contact textarea:hover {
-  -webkit-transition: border-color 0.3s ease-in-out;
-  -moz-transition: border-color 0.3s ease-in-out;
-  transition: border-color 0.3s ease-in-out;
-  border: 1px solid #aaa;
-}
-#contact textarea {
-  height: 100px;
-  max-width: 100%;
-  resize: none;
-}
-#contact button[type="submit"] {
-  cursor: pointer;
-  width: 100%;
-  border: none;
-  background: #4CAF50;
-  color: #FFF;
-  margin: 0 0 5px;
-  padding: 10px;
-  font-size: 15px;
-}
-#contact button[type="submit"]:hover {
-  background: #43A047;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background-color 0.3s ease-in-out;
-}
-#contact button[type="submit"]:active {
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
-}
-.copyright {
-  text-align: center;
-}
-#contact input:focus,
-#contact textarea:focus {
-  outline: 0;
-  border: 1px solid #aaa;
-}
-::-webkit-input-placeholder {
-  color: #888;
-}
-:-moz-placeholder {
-  color: #888;
-}
-::-moz-placeholder {
-  color: #888;
-}
-:-ms-input-placeholder {
-  color: #888;
 }
