--- a/less/main.less
+++ b/less/main.less
@@ -8,7 +8,7 @@ header {
     display: flex;
 }
 body {
-    background-color: #e2eb98;
+    background-color: @main-color;
 h1{
     font-size: 3em;
 }
@@ -27,6 +27,7 @@ h2 {
         width: 75%;
         @media @tablet {
             width: 95%;
+            margin-top:7em;
         }
         @media @mobile {
             width: 100%;
@@ -64,14 +65,7 @@ h2 {
             padding-bottom: 1em;
             // margin-top: 1em;
             .play {
-                background-color: #9dc4b5; 
-                color: black;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                border-radius: 2em;
-                font-size: 16px;  
+                .button();
             }
             p {
                 width: 80%;
@@ -86,6 +80,7 @@ h2 {
 }
 footer {
     text-align: center;
+    margin-bottom: 1em;
 }
 
     
