--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,9 +1,10 @@
-.buttonmix(){
-    width: 48%;
-    height: 50px;
-    border-radius: 1rem;
-    color: @white;
-    background: @main-color;
-    margin: 15px;
-    font-family: 'Open Sans Condensed', sans-serif;
+.button(){
+  background-color: #9dc4b5; 
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 2em;
+  font-size: 16px;  
   }
