--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,10 @@
 @white: #FFFFFF;
-@main-color: #666633;
-@accent-color: #d4d4aa;
+@main-color: #e2eb98;
+@accent-color: #adbf97;
 @text-color-dark: #595959;
 @content-bg-color: #bad9a2;
+@content-bg-color2: #9dc4b5;
 //media queries
 @mobile: (max-width: 500px);
 @tablet: (max-width: 800px);
+
