--- a/less/main.less
+++ b/less/main.less
@@ -51,12 +51,16 @@ h2 {
             border-radius: 2em;
             img {
                 border-radius: 2em;
+                width:100%;
+                height:100%;
+ 
             }
         margin: 1em 3em;
         @media @mobile {
             margin: 1em 1em;
         }
-        flex: 1 1 1;
+        // flex: 1 1 1;
+        flex: 0 1 auto;
         display: flex;
         justify-content: center;
         }
