--- a/css/index.css
+++ b/css/index.css
@@ -437,7 +437,7 @@ body .people .title {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 3rem;
+  padding: 1rem;
 }
 body .people .title .person {
   display: flex;
@@ -445,8 +445,8 @@ body .people .title .person {
   justify-content: center;
   justify-content: space-evenly;
   align-items: center;
-  width: 50%;
-  height: 200px;
+  width: 20%;
+  height: 150px;
   background: #FFFFFF;
   padding: 10px;
   margin: 12px;
@@ -455,7 +455,7 @@ body .people .title .person {
 body .people .title .person img {
   width: 20%;
   height: auto;
-  border-radius: 8rem;
+  border-radius: 2rem;
 }
 body .people .title .person {
   background-color: #6480f8;
@@ -474,6 +474,7 @@ h1 {
   body .people .title .person img {
     width: 150%;
     justify-content: center;
+    height: auto;
   }
 }
 @media (max-width: 600px) {
