--- a/less/team.less
+++ b/less/team.less
@@ -1,30 +1,6 @@
 body{
    background-image: url(/img/dark-wood.jpg);
-    // nav {
-    //     display: flex;
-    //     font-size: 1.8rem;
-    //     padding: 1 rem;
-    //     justify-content: space-evenly;
-    //     align-content: center;
-    //     width: 90%;
-        
-    //     @media only screen and (max-device-width: 600px) {
-    //         nav {
-    //          width: 100%;
-    //         }
-    //       }
-    //     a {
-    //         color:@white;
-    //         // border: 1px solid black;
-    //         background: @main-color;
-    //         text-decoration: none;
-    //         text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
-    //         &:hover {text-shadow: 0px 0px 7px @accent-color};
-    
-
-    
-    //     }
-    // }
+   
 .people {
     display: flex;
     justify-content: center;
@@ -36,15 +12,15 @@ body{
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding: 3rem;
+        padding: 1rem;
         .person{
             display: flex;
             flex-direction: column;
             justify-content: center;
             justify-content: space-evenly;
             align-items: center;
-            width: 50%;
-            height: 200px;
+            width: 20%;
+            height: 150px;
             background: @white;
             padding: 10px;
             margin: 12px;
@@ -52,26 +28,14 @@ body{
             img{
                 width: 20%;
                 height: auto;
-                border-radius: 8rem;
+                border-radius: 2rem;
             }
             
         }
     }
 }
 }
-// @media(max-width: 600px) {
-// .person {
-//     font-size: 1.7rem;
-//     img{
-//     display: flex;
-//     width: 150%;
-//      height: auto;
-//      background: none;
-//      border: 1px solid green;
 
-//     }
-//    } 
-// }
 
 body  .people .title .person {
     background-color: @accent-color;
@@ -92,6 +56,9 @@ body  .people .title .person {
 img{
     width: 150%;
     justify-content: center;
+    height: auto;
+    // justify-content: space-between;
+    // padding: 200px;
 }
 }
 }
