--- a/less/team.less
+++ b/less/team.less
@@ -41,7 +41,7 @@
 
         .team2-content {
             padding:2em;
-            margin:4em;
+            margin:2em;
             border-radius: 2em;
             width: auto;
             background-color: @content-bg-color;
@@ -59,7 +59,7 @@
 
         .team3-content {
             padding:2em;
-            margin:4em;
+            margin:2em 1em 2em 1em;
             border-radius: 2em;
             width: auto;
             background-color: @content-bg-color;
