--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+* {
+  color: #595959;
+}
 header {
   background-color: #adbf97;
   width: 100%;
@@ -166,16 +169,19 @@ body .home-container {
   }
 }
 body .home-container .home-box {
+  width: 600px;
   background-color: #bad9a2;
   border-radius: 2em;
-  margin: 3em;
+  margin: 3em auto 1em auto;
+}
+@media (max-width: 800px) {
+  body .home-container .home-box {
+    width: 90%;
+  }
 }
 @media (max-width: 500px) {
   body .home-container .home-box {
-    margin-left: 0em;
-    margin-right: 0em;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin: 0.5em auto 0.5em auto;
   }
 }
 body .home-container .home-box .homeimg {
@@ -200,7 +206,7 @@ body .home-container .home-box .home {
 }
 body .home-container .home-box .home .play {
   background-color: #9dc4b5;
-  color: black;
+  color: #595959;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -208,11 +214,12 @@ body .home-container .home-box .home .play {
   border-radius: 2em;
   font-size: 16px;
 }
-body .home-container .home-box .home p {
+body .home-container .home-box p {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  font-size: 1.25em;
+  font-size: 1.5em;
+  color: #595959;
 }
 footer {
   text-align: center;
@@ -307,7 +314,7 @@ body .container .navbar a {
 }
 .team-container .team2 .team2-content {
   padding: 2em;
-  margin: 4em;
+  margin: 2em;
   border-radius: 2em;
   width: auto;
   background-color: #bad9a2;
@@ -323,8 +330,114 @@ body .container .navbar a {
 }
 .team-container .team3 .team3-content {
   padding: 2em;
-  margin: 4em;
+  margin: 2em 1em 2em 1em;
   border-radius: 2em;
   width: auto;
   background-color: #bad9a2;
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(https://fonts.gstatic.com/s/opensans/v17/mem6YaGs126MiZpBA-UFUK0Zdcg.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'), local('OpenSans-Light'), url(https://fonts.gstatic.com/s/opensans/v17/mem5YaGs126MiZpBA-UN_r8OUuhs.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFVZ0e.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url(https://fonts.gstatic.com/s/opensans/v17/mem5YaGs126MiZpBA-UNirkOUuhs.ttf) format('truetype');
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea,
+#contact button[type="submit"] {
+  font: 400 12px/16px "Open Sans", Helvetica, Arial, sans-serif;
+}
+#contact {
+  background: #bad9a2;
+  padding: 25px;
+  margin: 50px 0;
+  border-radius: 2em;
+}
+#contact h3 {
+  color: #595959;
+  display: block;
+  font-size: 30px;
+  font-weight: 400;
+}
+#contact h4 {
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 13px;
+}
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #CCC;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+}
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #AAA;
+}
+#contact textarea {
+  height: 100px;
+  max-width: 100%;
+  resize: none;
+}
+#contact button[type="submit"] {
+  background-color: #9dc4b5;
+  color: #595959;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 2em;
+  font-size: 16px;
+}
+#contact button[type="submit"]:hover {
+  background: #adbf97;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
