--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,8 @@
+* {
+    color:@text-color-dark;
+}
 header {
-    background-color: #adbf97;
+    background-color: @accent-color;
     
     width: 100%;
     border-radius: 2em;
@@ -9,6 +12,7 @@ header {
 }
 body {
     background-color: @main-color;
+
 h1{
     font-size: 3em;
 }
@@ -36,14 +40,20 @@ h2 {
         justify-content: center;
 
         .home-box {
+            width:600px;
+            @media @tablet {
+                width:90%;
+            }
             background-color: @content-bg-color;
             border-radius: 2em;
-            margin: 3em;
+            margin: 3em auto 1em auto;
+
             @media @mobile {
-                margin-left:0em;
-                margin-right:0em;
-                margin-top: .5em;
-                margin-bottom:.5em;
+                // margin-left:0em;
+                // margin-right:0em;
+                // margin-top: .5em;
+                // margin-bottom:.5em;
+                margin: .5em auto .5em auto;
             }
         
 
@@ -70,18 +80,21 @@ h2 {
             // margin-top: 1em;
             .play {
                 .button();
+                }
             }
             p {
                 width: 80%;
                 margin-left: auto;
                 margin-right: auto;
-                font-size: 1.25em;
+                font-size: 1.5em;
+                color:@text-color-dark;
+                
             }
         }
     
     }
 }
-}
+
 footer {
     text-align: center;
     margin-bottom: 1em;
