--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,10 +1,10 @@
 .button(){
-  background-color: #9dc4b5; 
-  color: black;
+  background-color: @content-bg-color2; 
+  color: @text-color-dark;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   border-radius: 2em;
-  font-size: 16px;  
+  font-size: 16px; 
   }
