wrapping up more

--- a/less/main.less
+++ b/less/main.less
@@ -80,6 +80,8 @@ h2 {
             // margin-top: 1em;
             .play {
                 .button();
+                a{
+                    text-decoration: none;
                 }
             }
             p {
