--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,10 +1,10 @@
 .button(){
-  background-color: @content-bg-color2; 
-  color: @text-color-dark;
-  padding: 15px 32px;
+  background-color: pink; 
+  color: black;
+  padding: 15px 36px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   border-radius: 2em;
-  font-size: 16px; 
+  font-size: 1.5em; 
   }
