--- a/less/variables.less
+++ b/less/variables.less
@@ -1,11 +1,6 @@
-@white: #FFFFFF;
-@main-color: #e2eb98;
-@accent-color: #adbf97;
-@text-color-dark: #595959;
-@text-color-light: #c7c5c4;
-@content-bg-color: #bad9a2;
-@content-bg-color2: #9dc4b5;
+
 //media queries
+@smalldesktop: (max-width: 1400px);
 @mobile: (max-width: 500px);
 @tablet: (max-width: 800px);
 
