--- a/less/contact.less
+++ b/less/contact.less
@@ -1,119 +1,24 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);
+.contact-container {
+    background-color: yellow;
+    padding: 3em;
+    border-radius: 1em;
+    width: 300px;
+    margin-left:auto;
+    margin-right: auto;
+    fieldset {
+        margin:1em;
+        button {
+            .button();
+        }
+    }
+    @media @tablet {
+        width: 250px;
+    }
+    @media @mobile {
+        width: 200px;
 
-* {
-	margin:0;
-	padding:0;
-	box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-webkit-font-smoothing:antialiased;
-	-moz-font-smoothing:antialiased;
-	-o-font-smoothing:antialiased;
-	font-smoothing:antialiased;
-	text-rendering:optimizeLegibility;
+    }
+    #contact {
+        text-align: center;
+    }
 }
-
-// body {
-// 	font-family:"Open Sans", Helvetica, Arial, sans-serif;
-// 	font-weight:300;
-// 	font-size: 12px;
-// 	line-height:30px;
-// 	color:#777;
-// 	background:#0CF;
-// }
-
-// .container {
-// 	max-width:400px;
-// 	width:100%;
-// 	margin:0 auto;
-// 	position:relative;
-// }
-
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
-
-#contact {
-	background:@content-bg-color;
-	padding:25px;
-    margin:50px 0;
-    border-radius: 2em;;
-}
-
-#contact h3 {
-	color: @text-color-dark;
-	display: block;
-	font-size: 30px;
-	font-weight: 400;
-}
-
-#contact h4 {
-	margin:5px 0 15px;
-	display:block;
-	font-size:13px;
-}
-
-// fieldset {
-// 	border: medium none !important;
-// 	margin: 0 0 10px;
-// 	min-width: 100%;
-// 	padding: 0;
-// 	width: 100%;
-// }
-
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
-	width:100%;
-	border:1px solid #CCC;
-	background:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-}
-
-#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
-	-webkit-transition:border-color 0.3s ease-in-out;
-	-moz-transition:border-color 0.3s ease-in-out;
-	transition:border-color 0.3s ease-in-out;
-	border:1px solid #AAA;
-}
-
-#contact textarea {
-	height:100px;
-	max-width:100%;
-  resize:none;
-}
-
-#contact button[type="submit"] {
-	// cursor:pointer;
-
-	// border:none;
-	// background:#0CF;
-	// color:#FFF;
-	// margin:0 0 5px;
-	// padding:10px;
-    // font-size:15px;
-    .button()
-}
-
-#contact button[type="submit"]:hover {
-	background:@accent-color;
-	-webkit-transition:background 0.3s ease-in-out;
-	-moz-transition:background 0.3s ease-in-out;
-	transition:background-color 0.3s ease-in-out;
-}
-
-#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
-
-// #contact input:focus, #contact textarea:focus {
-// 	outline:0;
-// 	border:1px solid #999;
-// }
-// ::-webkit-input-placeholder {
-//  color:#888;
-// }
-// :-moz-placeholder {
-//  color:#888;
-// }
-// ::-moz-placeholder {
-//  color:#888;
-// }
-// :-ms-input-placeholder {
-//  color:#888;
-// }
