--- a/less/main.less
+++ b/less/main.less
@@ -1,105 +1,103 @@
-* {
-    color:@text-color-dark;
-}
-header {
-    background-color: @accent-color;
-    
-    width: 100%;
-    border-radius: 2em;
-}
-.container {
-    display: flex;
-}
 body {
-    background-color: @main-color;
-
-h1{
-    font-size: 3em;
-}
-h2 {
-    font-size: 2em;
-}
-    header {
-        text-align: center;
-        padding-bottom:1.5em
-        
+    height: 100%;
+    background-color: red;
+    p {
+        font-size: 1.5em;
     }
-
-    .home-container{
-        display:flex;
-        flex-direction: column;
-        width: 75%;
-        @media @tablet {
-            width: 95%;
-            margin-top:7em;
-        }
-        @media @mobile {
-            width: 100%;
-        }
-        margin:auto;
-        justify-content: center;
-
-        .home-box {
-            width:600px;
+    header {
+        .header-text-img-container {
+            display: flex;
+            flex-direction: row-reverse;
             @media @tablet {
-                width:90%;
+                flex-direction: column-reverse;
             }
-            background-color: @content-bg-color;
-            border-radius: 2em;
-            margin: 3em auto 1em auto;
-
-            @media @mobile {
-                // margin-left:0em;
-                // margin-right:0em;
-                // margin-top: .5em;
-                // margin-bottom:.5em;
-                margin: .5em auto .5em auto;
-            }
-        
-
-        .homeimg{
-            border-radius: 2em;
-            img {
-                border-radius: 2em;
-                width:100%;
-                height:100%;
- 
-            }
-        margin: 1em 3em;
-        @media @mobile {
-            margin: 1em 1em;
-        }
-        // flex: 1 1 1;
-        flex: 0 1 auto;
-        display: flex;
-        justify-content: center;
-        }
-        .home {
-            // padding-top: 1em;
-            padding-bottom: 1em;
-            // margin-top: 1em;
-            .play {
-                .button();
-                a{
-                    text-decoration: none;
+            .header-text {
+                margin-left:1em;
+                @media @tablet {
+                    margin:0 auto;
+                }
+                @media @mobile {
+                    display:none;
+                }
                 }
             }
-            p {
-                width: 80%;
-                margin-left: auto;
-                margin-right: auto;
-                font-size: 1.5em;
-                color:@text-color-dark;
-                
+            img {
+                width: 100px;
+                height: 100px;
+                border-radius: 1em;
+                // @media @tablet {
+                //     margin:0 auto;
+                //     text-align: center;
+                // }
             }
         }
-    
     }
-}
+    h1 {
+        font-size: 3em;
+    }
+    h2 {
+        font-size: 2em;
+    }
+    .container {
+        // background-color: red;
+        .top-container {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: fuchsia;
+        }
+        .home-container {
+            padding-top: 7em;
+            padding-bottom: 10em;
+            display: flex;
+            justify-content: center;
+            @media @smalldesktop {
+                flex-direction:column;
+            }
+            @media @tablet {
+                padding-top: 14em;
+            }
+            .home-box {
+                width:30%;
+                background-color: yellow;
+                margin-left: 10px;
+                margin-right: 10px;
+                border-radius: 1em;
+                .play {
+                    .button();
+                }
+                @media @smalldesktop {
+                    width: 800px;
+                    margin: 0 auto;
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                    padding-bottom: 2em;
+                }
+                @media @tablet {
+                    width:90%;
 
-footer {
-    text-align: center;
-    margin-bottom: 1em;
-}
+                }
+                .home {
+                    text-align: center;
+                }
 
+                .homeimg {
+                    // margin-left: 0 auto;
+                    // margin-right:0 auto;
+                    text-align: center; 
+                    margin: 1em;
+                    img{
+                    border-radius: 2em;
+                    width:100%;
+                    }
+                    }
+                }
+            }
+        }
+        footer {
+            text-align: center;
+            background-color: yellowgreen;
+            padding: 1em;
+
+        }
     
