--- a/less/team.less
+++ b/less/team.less
@@ -1,71 +1,48 @@
-.team-container {
-    width:100%;
-    background-color: @content-bg-color2;
-    border-radius: 2em;
-    margin-top: 3em;
-    p{
-        text-align: center;
-        font-size: 2em;
-    }
-    img {
-        width: 150px;
-        height: 150px;
-        border-radius: 100px;
-        display:block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .team1{
-        
-        width: 100%;
-        display: flex;
-        justify-content: center;
-
-        .team1-content {
-            padding:2em;
-            margin:4em;
-            border-radius: 2em;
-            background-color: @content-bg-color;
-            width: auto;
+body {
+    .home-container {
+        .logo-container {
+            display: flex;
             justify-content: center;
+            @media @tablet {
+            margin-top:4em;
+            }
+            @media @mobile{
+                margin-top: 2em;
+            }
+            .logo {
+                margin-left:1em;
+                margin-right: 1em;
+                img{
+                width: 100%;
+                border-radius: 1em;
+                }
+            }
+        }
+        .team-container {
+            display: flex;
+            flex-wrap: wrap;
+            width:1000px;
+            justify-content: center;
+            @media @smalldesktop {
+                width: 75%;
+                margin: 0 auto;
+            }
+            @media @tablet {
+                width: 95%;
+            }
+            .team-content {
+                background-color: yellow;
+                border-radius: 2em;
+                padding:3em;
+                margin:1em;
+                p {
+                    text-align: center;
+                }
+                img {
+                    width:150px;
+                    border-radius: 1em;
+                }
+            }
         }
     }
-
-    .team2{
-        display: flex;
-        width: 100%;
-        justify-content: center;
-        @media @mobile {
-            flex-direction: column;
-        }
-
-        .team2-content {
-            padding:2em;
-            margin:2em;
-            border-radius: 2em;
-            width: auto;
-            background-color: @content-bg-color;
-
-
-        }
-    }
-
-    .team3 {
-        display: flex;
-        justify-content: center;
-        @media @mobile {
-            flex-direction: column;
-        }
-
-        .team3-content {
-            padding:2em;
-            margin:2em 1em 2em 1em;
-            border-radius: 2em;
-            width: auto;
-            background-color: @content-bg-color;
-
-
-        }
-    }
-
 }
