--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,6 @@
 .button(){
-  background-color: pink; 
-  color: black;
+  background-color: @footer-bg; 
+  color: @main-text;
   padding: 15px 36px;
   text-align: center;
   text-decoration: none;
