--- a/less/team.less
+++ b/less/team.less
@@ -31,7 +31,7 @@ body {
                 width: 95%;
             }
             .team-content {
-                background-color: yellow;
+                background-color: @content-bg;
                 border-radius: 2em;
                 padding:3em;
                 margin:1em;
