--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,10 @@
-
+//colors
+@nav-bg:#f79256;
+@bg: #e22e5f;
+@footer-bg:#49a2d2;
+@content-bg: #9cec5b;
+@nav-text: #2a628f;
+@main-text: #292928;
 //media queries
 @smalldesktop: (max-width: 1400px);
 @mobile: (max-width: 500px);
