--- a/less/contact.less
+++ b/less/contact.less
@@ -1,9 +1,10 @@
 .contact-container {
-    background-color: yellow;
+    background-color: @content-bg;
     padding: 3em;
     border-radius: 1em;
     width: 300px;
-    margin-left:auto;
+    display: inline-block;
+    margin-left: auto;
     margin-right: auto;
     fieldset {
         margin:1em;
