--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,7 @@
 body {
     height: 100%;
-    background-color: red;
+    background-color: @bg;
+    color:@main-text;
     p {
         font-size: 1.5em;
     }
@@ -44,7 +45,7 @@ body {
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: fuchsia;
+            // background-color: fuchsia;
         }
         .home-container {
             padding-top: 7em;
@@ -59,7 +60,7 @@ body {
             }
             .home-box {
                 width:30%;
-                background-color: yellow;
+                background-color: @content-bg;
                 margin-left: 10px;
                 margin-right: 10px;
                 border-radius: 1em;
@@ -96,7 +97,7 @@ body {
         }
         footer {
             text-align: center;
-            background-color: yellowgreen;
+            background-color: @footer-bg;
             padding: 1em;
 
         }
