--- a/less/navbar.less
+++ b/less/navbar.less
@@ -1,7 +1,7 @@
 body {
     .container {
         .top-container {
-            background-color: fade( #FF0099, 80% ) ;
+            background-color: fade(@nav-bg, 80% ) ;
             display: flex;
             flex-direction: row-reverse;
             justify-content: space-between;
@@ -19,11 +19,11 @@ body {
                     margin-bottom: 1em; 
                 }
                 :hover {
-                    background-color: forestgreen;
+                    background-color: @content-bg;
                     border-radius: .5em;
                 }
                 a {
-                    color: dodgerblue;
+                    color: @nav-text;
                     text-align: center;
                     padding: 14px 10px;
 
